# serial-broker

./: .gitignore  README.md  pyproject.toml  sbctl  serial-broker
scripts/: fake_target.py
serial_broker/: __init__.py  cli.py  daemon.py  logs.py  protocol.py  usb.py
tests/: smoke_fake.sh
