[project]
name = "serial-broker"
version = "0.1.0"
description = "Local serial transaction broker for AI/coding agents"
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5"]

[project.scripts]
serial-broker = "serial_broker.daemon:main"
sbctl = "serial_broker.cli:main"

[tool.setuptools.package-data]
serial_broker = ["assets/*"]
